@@ -1,8 +1,6 @@
 package com.synctok.synctokApi.service;
 
 import com.synctok.synctokApi.client.CloudinaryClient;
-import com.synctok.synctokApi.client.InstagramClient;
-import com.synctok.synctokApi.exception.MediaContainerCreationException;
 import com.synctok.synctokApi.exception.UnsupportedPlatformException;
 import com.synctok.synctokApi.service.strategy.InstagramStrategy;
 import com.synctok.synctokApi.service.strategy.PlatformStrategy;
@@ -14,13 +12,13 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -32,96 +30,84 @@ class VideoServiceTest {
     private CloudinaryClient cloudinaryClient;
 
     @Mock
-    private InstagramClient instagramClient;
+    private InstagramStrategy instagramStrategy;
 
     @Mock
     private MultipartFile videoFile;
 
-    private InstagramStrategy instagramStrategy;
     private VideoService videoService;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
 
-        instagramStrategy = new InstagramStrategy(instagramClient);
-        List<PlatformStrategy> strategies = Arrays.asList(instagramStrategy);
+        List<PlatformStrategy> strategies = List.of(instagramStrategy);
         videoService = new VideoService(strategies, cloudinaryClient);
     }
 
     @Test
     void publishVideo_SuccessfulPublish() throws IOException {
         String videoUrl = "http://example.com/video.mp4";
-        String mediaContainerId = "media123";
-        List<String> platforms = Arrays.asList("instagram");
+        List<String> platforms = List.of("instagram");
 
         when(cloudinaryClient.uploadAndGetPublicUrl(videoFile)).thenReturn(videoUrl);
-        when(instagramClient.createMediaContainer(videoUrl)).thenReturn(mediaContainerId);
 
         assertDoesNotThrow(() -> videoService.publishVideo(videoFile, platforms));
 
         verify(cloudinaryClient).uploadAndGetPublicUrl(videoFile);
-        verify(instagramClient).createMediaContainer(videoUrl);
-        verify(instagramClient).publishMedia(mediaContainerId);
+        verify(instagramStrategy).publishVideo(videoFile, videoUrl);
     }
 
     @Test
     void publishVideo_UnsupportedPlatform() throws IOException {
         String videoUrl = "http://example.com/video.mp4";
-        List<String> platforms = Arrays.asList("unsupported");
+        List<String> platforms = List.of("unsupported");
 
         when(cloudinaryClient.uploadAndGetPublicUrl(videoFile)).thenReturn(videoUrl);
 
-        UnsupportedPlatformException exception = assertThrows(UnsupportedPlatformException.class,
+        assertThrows(UnsupportedPlatformException.class,
                 () -> videoService.publishVideo(videoFile, platforms));
 
-        assertEquals("unsupported", exception.getPlatform());
         verify(cloudinaryClient).uploadAndGetPublicUrl(videoFile);
-        verify(instagramClient, never()).createMediaContainer(anyString());
-        verify(instagramClient, never()).publishMedia(anyString());
+        verify(instagramStrategy, never()).publishVideo(any(), anyString());
     }
 
     @Test
     void publishVideo_CloudinaryClientThrowsIOException() throws IOException {
-        List<String> platforms = Arrays.asList("instagram");
+        List<String> platforms = List.of("instagram");
 
         when(cloudinaryClient.uploadAndGetPublicUrl(videoFile)).thenThrow(new IOException("Upload failed"));
 
         assertThrows(IOException.class, () -> videoService.publishVideo(videoFile, platforms));
 
         verify(cloudinaryClient).uploadAndGetPublicUrl(videoFile);
-        verify(instagramClient, never()).createMediaContainer(anyString());
-        verify(instagramClient, never()).publishMedia(anyString());
+        verify(instagramStrategy, never()).publishVideo(any(), anyString());
     }
 
     @Test
-    void publishVideo_MediaContainerCreationFails() throws IOException {
+    void publishVideo_StrategyThrowsException() throws IOException {
         String videoUrl = "http://example.com/video.mp4";
-        List<String> platforms = Arrays.asList("instagram");
+        List<String> platforms = List.of("instagram");
 
         when(cloudinaryClient.uploadAndGetPublicUrl(videoFile)).thenReturn(videoUrl);
-        when(instagramClient.createMediaContainer(videoUrl)).thenThrow(new RuntimeException("Creation failed"));
+        doThrow(new RuntimeException("Publish failed")).when(instagramStrategy).publishVideo(videoFile, videoUrl);
 
-        assertThrows(MediaContainerCreationException.class, () -> videoService.publishVideo(videoFile, platforms));
+        assertThrows(RuntimeException.class, () -> videoService.publishVideo(videoFile, platforms));
 
         verify(cloudinaryClient).uploadAndGetPublicUrl(videoFile);
-        verify(instagramClient).createMediaContainer(videoUrl);
-        verify(instagramClient, never()).publishMedia(anyString());
+        verify(instagramStrategy).publishVideo(videoFile, videoUrl);
     }
 
     @Test
     void publishVideo_CaseInsensitivePlatformNames() throws IOException {
         String videoUrl = "http://example.com/video.mp4";
-        String mediaContainerId = "media123";
-        List<String> platforms = Arrays.asList("InStAgRaM");
+        List<String> platforms = List.of("InStAgRaM");
 
         when(cloudinaryClient.uploadAndGetPublicUrl(videoFile)).thenReturn(videoUrl);
-        when(instagramClient.createMediaContainer(videoUrl)).thenReturn(mediaContainerId);
 
         assertDoesNotThrow(() -> videoService.publishVideo(videoFile, platforms));
 
         verify(cloudinaryClient).uploadAndGetPublicUrl(videoFile);
-        verify(instagramClient).createMediaContainer(videoUrl);
-        verify(instagramClient).publishMedia(mediaContainerId);
+        verify(instagramStrategy).publishVideo(videoFile, videoUrl);
     }
 }
